# riglib

./: Cargo.toml  LICENSE  README.md  luminous-strolling-badger.md
.github/workflows/: ci.yml
crates/riglib/: Cargo.toml
crates/riglib-core/: Cargo.toml
crates/riglib-core/src/: audio.rs  band.rs  error.rs  events.rs  helpers.rs  lib.rs  rig.rs  transport.rs  types.rs
crates/riglib-elecraft/: Cargo.toml
crates/riglib-elecraft/src/: builder.rs  commands.rs  lib.rs  models.rs  protocol.rs  rig.rs  transceive.rs
crates/riglib-flex/: Cargo.toml
crates/riglib-flex/src/: builder.rs  client.rs  codec.rs  dax.rs  discovery.rs  lib.rs  meters.rs  mode.rs  models.rs  rig.rs  state.rs  vita49.rs
crates/riglib-icom/: Cargo.toml
crates/riglib-icom/src/: builder.rs  civ.rs  commands.rs  io.rs  lib.rs  models.rs  rig.rs  transceive.rs
crates/riglib-kenwood/: Cargo.toml
crates/riglib-kenwood/src/: builder.rs  commands.rs  lib.rs  models.rs  protocol.rs  rig.rs  transceive.rs
crates/riglib-test-harness/: Cargo.toml
crates/riglib-test-harness/src/: lib.rs  mock_serial.rs  mock_tcp.rs
crates/riglib-text-io/: Cargo.toml
crates/riglib-text-io/src/: io.rs  lib.rs  protocol.rs
crates/riglib-transport/: Cargo.toml
crates/riglib-transport/src/: audio.rs  lib.rs  serial.rs  tcp.rs  udp.rs
crates/riglib-yaesu/: Cargo.toml
crates/riglib-yaesu/src/: builder.rs  commands.rs  lib.rs  models.rs  protocol.rs  rig.rs  transceive.rs
crates/riglib/examples/: audio_record.rs  basic_icom.rs  flexradio_discover.rs  monitor_events.rs  scan_frequencies.rs
crates/riglib/src/: lib.rs
docs/: 002-research-and-architecture.md  003-flexradio-research.md  004-audio-streaming-research.md  CONTEST-LIBRARIES.md  OTRSP-PLAN.md  PLAN.md  WINKEYER-PLAN.md  command-audit.md
plans/: architecture-roadmap.md  attenuator-rework.md  auxiliary-keying-port.md  error-model.md  improvements.md  phase-a-io-task-unification.md  phase-b-priority-scheduling.md  phase-c-read-coalescing.md  phase-d-text-protocol-migration.md  phase-e-flex-alignment.md  phase-f-so2r-transactions.md  plan-discussion-responses.md  transport-details.md
test-app/: Cargo.toml
test-app/src/: io_test.rs  main.rs
