[package]
name = "riglib-test-app"
description = "CLI test application for riglib"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
riglib = { workspace = true, features = ["full", "audio"] }
riglib-icom = { workspace = true, features = ["audio"] }
riglib-yaesu = { workspace = true, features = ["audio"] }
riglib-kenwood = { workspace = true, features = ["audio"] }
riglib-elecraft = { workspace = true, features = ["audio"] }
riglib-flex = { workspace = true }
riglib-transport = { workspace = true, features = ["audio"] }
riglib-test-harness.workspace = true
tokio.workspace = true
tokio-util.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { workspace = true }
rand = "0.8"
hound = "3"
