[package]
name = "riglib-test-harness"
description = "Test utilities, mock transports, and protocol recorders for riglib"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
riglib-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
